# janito

./: .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  PROVIDERS.md  README-dev.md  README.md  STRUCTURE.md  adding_mcp.txt  config.json  market_test.py  mkdocs.yml  mkdocs_hooks.py  openai_test.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  revolut_amd_trading_script.md  revolut_amd_trading_script.txt  simplify.md  test.py  test_adapter_level_fix.py  tool_plugins.md  tool_plugins_table.md  tox.ini  x.txt  zai_sdk_test.txt
benchmark/: cli_basics.py
benchmarks/: test_chat_script_runner.py
docs/: CHANGELOG.md  CLI_OPTIONS.md  CONFIGURATION.md  Interfaces.txt  TOOLBAR-STYLING.md  alternatives.md  cerebras-setup.md  deepseek-setup.md  driver-request-cancellation.md  driver_flow.md  driver_request_cancellation.md  drivers.md  event-bus.md  event_bus.md  index.md  llm-drivers.md  llm_drivers.md  llm_drivers_required_config.md  security.md  supported-models.md  supported-providers-models.md  terms.md  tools-index.md  tools-precision.md  tools_natural_results.md  tools_precision.md
janito/: README.md  __init__.py  _version.py  action_type.py  cli.py  config_manager.py  console.py  conversation_history.py  dir_walk_utils.py  driver_events.py  event_types.py  exceptions.py  formatting.py  formatting_token.py  gitignore_utils.py  llm_agent.py  llm_auth_manager.py  llm_driver.py  llm_model_info.py  llm_provider.py  perf_singleton.py  performance_collector.py  performance_tracker.py  platform_discovery.py  (+16 more)
(+330 files in other folders)
