[build-system]
requires = ["setuptools>=61.0", "typer>=0.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "janito"
version = "2.0.0-dev"
description = "A new Python package called janito."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"

[project.scripts]
janito = "janito.__main__:main"

[tool.ruff.lint]
select = ["C901", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10
